# client-python

./: .coveragerc  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  binding.py  bindings.py  pyproject.toml  requirements-dev.txt  secret.py  setup.cfg  setup.py  test_binding.py  test_bindings.py  test_secret.py
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: tests.yaml
bindings/: binding.py  bindings.py
example/: example.py
tests/: test_binding.py  test_bindings.py  test_secret.py
